<resources>
    <string name="app_name">PingMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan">Connect. Chat. Thrive</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_your_name">Enter Your Message</string>
    <string name="save">Save</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="right_image">Right Image</string>
    <string name="no_device_found">No Device Found.</string>
    <string name="device_name">Device Name</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="document_name">Document Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="details">Details</string>
    <string name="add_to_contact">Add to Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="search_devices">Search Devices</string>
    <string name="connect">Connect</string>
    <string name="connecting">connecting</string>
    <string name="progress_0">Progress: 0%</string>
    <string name="other_device_is_disconnected">Other Device is disconnected.</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="ok">Ok</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="exit">Exit</string>
</resources>