<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/contact"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/contactNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        android:text="@string/contact_name" />

    <TextView
        android:id="@+id/contactPhoneTextView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/phone_number" />

    <Button
        android:id="@+id/saveNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_contact"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonborder"
        android:textColor="@color/black"/>

</LinearLayout>
