<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="20dp">

    <!-- Using a RelativeLayout to position the button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- LinearLayout containing TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/productsansregular"
                android:textSize="16sp"
                tools:text="@string/device_name" />

            <TextView
                android:id="@+id/tvDeviceAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:fontFamily="@font/productsansregular"
                android:textSize="12sp"
                tools:text="192.168.0.1" />

            <TextView
                android:id="@+id/tvDeviceDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsansregular"
                android:layout_marginVertical="6dp"
                android:textSize="12sp"
                tools:text="@string/status" />

        </LinearLayout>

        <!-- Connect Button at the right center -->
        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonborder"
            android:textColor="@color/black"
            android:text="@string/connect"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/productsansregular"
            android:layout_marginEnd="5dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
